--- a/PortfolioNachgebautTest/style.css
+++ b/PortfolioNachgebautTest/style.css
@@ -348,6 +348,7 @@ span {
 
 .education h2 {
     margin-bottom: 0;
+    padding-bottom: 8rem;
 }
 
 .education .education-row {
@@ -521,6 +522,11 @@ span {
 .contact {
     min-height: auto;
     padding-bottom: 7rem;
+}
+
+.contact h2 {
+    padding-bottom: 6rem;
+    padding-top: 4rem;
 }
 
 .contact form {
